--- a/src/view/component/Board.scss
+++ b/src/view/component/Board.scss
@@ -8,16 +8,40 @@
   align-items: center;
   justify-content: space-between;
   min-width: 500px;
-  padding: 8px;
+  padding: 12px;
+  background-color: $gray4;
 
-  &-score {
+  &-data {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 10px;
+    width: 100px;
+    &-label {
+      font-size: 12px;
+      font-weight: bold;
+      color: $gray2;
+    }
+    &-value {
+      margin-top: 4px;
+      font-size: 20px;
+      font-weight: bold;
+    }
   }
 
   &-button {
+    border-radius: 4px;
+    appearance: none;
+    padding: 5px 10px;
+    border: none;
+    outline: none;
+    background-color: white;
+    transition: all 0.25s;
 
+    &:hover {
+      background-color: cornflowerblue;
+      color: white;
+      cursor: pointer;
+    }
   }
 
 }
