--- a/src/view/component/GameMap.scss
+++ b/src/view/component/GameMap.scss
@@ -6,7 +6,6 @@
 .game-map {
   display: grid;
   margin: 0 auto;
-  //gap: 1px;
 
   &-wrapper {
     width: 100%;
@@ -18,8 +17,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    padding: 0 20px;
     font-size: 20px;
     font-weight: bold;
   }
